--- a/templates/users/add.html.twig
+++ b/templates/users/add.html.twig
@@ -18,31 +18,7 @@
         {% endfor %}
         </ul>
     {% endif %}
-    <form class="ui form" action="{{path('insertUser')}}" method="post">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate_add_user') }}" >
-        <div class="field">
-            <label>Username:</label>
-            <input type="text" name="username">
-        </div>
-
-        <div class="field">
-            <label>Email</label>
-            <input type="email" name="email">
-        </div>
-
-        <div class="field">
-            <label>Password</label>
-            <input type="password" name="password">
-        </div>
-
-        <div class="field">
-            <label>Confirm Password</label>
-            <input type="password" name="confirm_password">
-        </div>
-
-        <button class="ui button" type="submit">Add</button>
-
-    </form>
+    {{ form(form, {'method': 'POST'}) }}
 </div>
 
 {% endblock %}
