--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,11 +11,12 @@
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
     </head>
     <body>
+        {{ include('navbar.html.twig') }}
         {% block body %}{% endblock %}
     </body>
+    {% block javascripts %}
+        {#{{ encore_entry_script_tags('app') }}#}
+    {% endblock %}
 </html>
