--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,1 +1,8 @@
-<h1>{{your_name}}</h1>
+{% extends 'base.html.twig' %}
+{% block title %}Home{% endblock %}
+
+{% block body %}
+    <div class="container">
+        <h1>{{your_name}}</h1>
+    </div>
+{% endblock %}
