--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -3,13 +3,8 @@
 {% block title %}List of Users{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>All Users!</h1>
+<div class="container">
+    <h1>All Users</h1>
     {% for message in app.flashes('success') %}
         <div class="alert alert-success">
             {{ message }}
@@ -20,26 +15,36 @@
             {{ message }}
         </div>
     {% endfor %}
-    <table border="1">
-        <tr>
-            <th colspan="2">List of Users</th>
-            <th><a href="{{ path('addUser') }}">Add</a></th>
-        </tr>
-        <tr>
-            <th>ID</th>
-            <th>Email</th>
-            <th>Action</th>
-        </tr>
-        {% for user in users %}
-         <tr>
-            <td>{{ user.id }}</td>
-            <td>{{ user.email }}</td>
-            <td>
-                <a href="{{ path('editUser',{'id': user.id}) }}">Edit</a> |
-                <a href="{{ path('deleteUser',{'id': user.id}) }}">Delete</a>
-            </td>
-         </tr>
-        {% endfor %}
+    <table class="table table-striped" id="users_list">
+        <thead>
+            <tr>
+                <th colspan="2">List of Users</th>
+                <th><a href="{{ path('addUser') }}" class="btn btn-success">Add</a></th>
+            </tr>
+            <tr>
+                <th>ID</th>
+                <th>Email</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        {% if users %}
+            {% for user in users %}
+            <tr>
+                <td>{{ user.id }}</td>
+                <td>{{ user.email }}</td>
+                <td>
+                    <a href="{{ path('editUser',{'id': user.id}) }}" class="btn btn-dark">Edit</a>
+                    <a href="#" data-id="{{ user.id }}" class="btn btn-danger delete-user">Delete</a>
+                </td>
+            </tr>
+            {% endfor %}
+        {% else %}
+            <p>No users to display</p>
+        {% endif %}
     </table>
 </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="/js/custom.js"></script>
 {% endblock %}
