--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -4,21 +4,13 @@
 
 {% block body %}
 
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
+<div class="container">
     <h1>Edit User</h1>
-    {% if errorsString is defined %}
-        <ul>
-        {% for error in errorsString%}
-            <li>{{error}}</li>
-        {% endfor %}
-        </ul>
-    {% endif %}
-    {{ form(form, {'method': 'POST', 'attr': {'novalidate': 'novalidate'}}) }}
+    {{ form_start(form, {'method': 'POST'}) }}
+        {{ form_row(form.username) }}
+        {{ form_row(form.email) }}
+        {{ form_row(form.save) }}
+    {{ form_end(form) }}
 </div>
 
 {% endblock %}
