Implement encoded password and create auth

--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -39,7 +39,9 @@
             </tr>
             {% endfor %}
         {% else %}
-            <p>No users to display</p>
+        <tr>
+            <td colspan="3">No users to display</td>
+        </tr>
         {% endif %}
     </table>
 </div>
