--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -10,9 +10,21 @@
                 <li class="nav-item">
                     <a href="/" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a href="/users" class="nav-link">Users</a>
-                </li>
+                {% if app.user %}
+                    <li class="nav-item">
+                        <a href="/users" class="nav-link">Users</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/logout" class="nav-link">Logout from {{ app.user.username }}</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a href="/register" class="nav-link">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/login" class="nav-link">Login</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
