--- a/templates/users/add.html.twig
+++ b/templates/users/add.html.twig
@@ -10,6 +10,7 @@
         {{ form_row(form.username) }}
         {{ form_row(form.email) }}
         {{ form_row(form.password) }}
+        {{ form_row(form.profile) }}
         {{ form_row(form.save) }}
     {{ form_end(form) }}
 </div>
