--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container">
-    {% for flashError in app.flashes('verify_email_error') %}
+    {% for flashError in app.flashes('error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
