--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -48,5 +48,6 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="/js/custom.js"></script>
+    {{ parent() }}
+    {{ encore_entry_script_tags('custom') }}
 {% endblock %}
