--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,21 +1,18 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
     <div class="container">
-        <a href="/" class="navbar-brand">Pilot</a>
+        <a href="/users" class="navbar-brand">Pilot</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
             <span class="navbar-toggle-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="mobile-nav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="/" class="nav-link">Home</a>
-                </li>
                 {% if app.user %}
                     <li class="nav-item">
                         <a href="/users" class="nav-link">Users</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/logout" class="nav-link">Logout from {{ app.user.username }}</a>
+                        <a href="/logout" class="nav-link">Logout ({{ app.user.username }})</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
