--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,7 +9,7 @@
             {{ message }}
         </div>
     {% endfor %}
-    <form method="post">
+    <form method="post" novalidate>
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
@@ -18,7 +18,7 @@
             <div class="mb-3">
                 You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
             </div>
-        {% endif %}
+        {% else %}
 
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail">Email</label>
@@ -44,6 +44,7 @@
         <button class="btn btn-primary mt-3" type="submit">
             Sign in
         </button>
+        {% endif %}
     </form>
 </div>
 {% endblock %}
