--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,6 +3,69 @@
 
 {% block body %}
     <div class="container">
-        <h1>{{your_name}}</h1>
+        <h1>List Homepage</h1>
+        <a href="{{ path('addList') }}" class="btn btn-primary mb-3"><i class="fa fa-plus" aria-hidden="true"></i></a> <b>New List</b>
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% for message in app.flashes('failed') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
+        <div class="row">
+            {% if lists %}
+                {% for list in lists %}
+                    <div class="col-md-6">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr class="table-info">
+                                    <th>
+                                        {{ list.getListName(list.id) }}
+                                        <a href="{{ path('editList',{'id': list.id}) }}" class="btn btn-success"><i class="fa fa-edit" aria-hidden="true"></i></a>
+                                        <form method="POST" class="float-right" action="{{ path('deleteList') }}" onsubmit="return confirm('Are you sure you want to delete this list and related items?');">
+                                            <input type="hidden" name="_method" value="DELETE">
+                                            <input type="hidden" name="id" value="{{ list.id }}">
+                                            <button class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></button>
+                                        </form>
+                                    </th>
+                                </tr>
+                                <tr>
+                                    <th>Item</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% if list.getItems(list.id) is not empty %}
+                                    {% for item in list.getItems(list.id) %}
+                                        <tr>
+                                            <td>
+                                                {{ item.getItemName(item.id) }}
+                                                <a href="{{ path('editItem',{'id': item.id}) }}" class="btn btn-success"><i class="fa fa-edit" aria-hidden="true"></i></a>
+                                                <form method="POST" class="float-right" action="{{ path('deleteItem') }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                                    <input type="hidden" name="_method" value="DELETE">
+                                                    <input type="hidden" name="id" value="{{ item.id }}">
+                                                    <button class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></button>
+                                                </form>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                {% else %}
+                                    <tr>
+                                        <td>No record.</td>
+                                    </tr>
+                                {% endif %}
+                                <tr>
+                                    <td class="text-right">
+                                        <b>New Item</b> <a href="{{ path('addItem',{'id': list.id}) }}" class="btn btn-primary mb-3"><i class="fa fa-plus" aria-hidden="true"></i></a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                {% endfor %}
+            {% endif %}    
+        </div>
     </div>
 {% endblock %}
