--- a/templates/items/add.html.twig
+++ b/templates/items/add.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 <div class="container">
-    <h1>Add Item</h1>
+    <h1>Add Item<a class="btn btn-danger float-right" href="{{ path('index') }}"><i class="fa fa-times"></i></a></h1>
     {{ form_start(form, {'method': 'POST',attr: {'novalidate': 'novalidate'}}) }}
         {{ form_row(form.item_name) }}
         {{ form_row(form.color) }}
