--- a/templates/lists/add.html.twig
+++ b/templates/lists/add.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 <div class="container">
-    <h1>Add List</h1>
+    <h1>Add List<a class="btn btn-danger float-right" href="{{ path('index') }}"><i class="fa fa-times"></i></a></h1>
     {{ form_start(form, {'method': 'POST',attr: {'novalidate': 'novalidate'}}) }}
         {{ form_row(form.list_name) }}
         {{ form_row(form.save) }}
